# zupedils

./: AUTHORS  CMakeLists.txt  Makefile  Makefile.in  README  README.md  configure  configure.ac  configure.scan  zupedils.c
src/: Makefile.am  Makefile.in  resources.c  zupedils.c
